; ModuleID = '/home/carl/AnghaBench/linux/net/bridge/extr_br_vlan.c___br_vlan_get_pvid.c'
source_filename = "/home/carl/AnghaBench/linux/net/bridge/extr_br_vlan.c___br_vlan_get_pvid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.net_bridge_port = type { i32 }
%struct.net_bridge_vlan_group = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.net_device*, %struct.net_bridge_port*, i32*)* @__br_vlan_get_pvid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__br_vlan_get_pvid(%struct.net_device* %0, %struct.net_bridge_port* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.net_device*, align 8
  %6 = alloca %struct.net_bridge_port*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca %struct.net_bridge_vlan_group*, align 8
  store %struct.net_device* %0, %struct.net_device** %5, align 8
  store %struct.net_bridge_port* %1, %struct.net_bridge_port** %6, align 8
  store i32* %2, i32** %7, align 8
  %9 = load %struct.net_bridge_port*, %struct.net_bridge_port** %6, align 8
  %10 = icmp ne %struct.net_bridge_port* %9, null
  br i1 %10, label %11, label %14

11:                                               ; preds = %3
  %12 = load %struct.net_bridge_port*, %struct.net_bridge_port** %6, align 8
  %13 = call %struct.net_bridge_vlan_group* @nbp_vlan_group(%struct.net_bridge_port* %12)
  store %struct.net_bridge_vlan_group* %13, %struct.net_bridge_vlan_group** %8, align 8
  br label %26

14:                                               ; preds = %3
  %15 = load %struct.net_device*, %struct.net_device** %5, align 8
  %16 = call i64 @netif_is_bridge_master(%struct.net_device* %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %22

18:                                               ; preds = %14
  %19 = load %struct.net_device*, %struct.net_device** %5, align 8
  %20 = call i32 @netdev_priv(%struct.net_device* %19)
  %21 = call %struct.net_bridge_vlan_group* @br_vlan_group(i32 %20)
  store %struct.net_bridge_vlan_group* %21, %struct.net_bridge_vlan_group** %8, align 8
  br label %25

22:                                               ; preds = %14
  %23 = load i32, i32* @EINVAL, align 4
  %24 = sub nsw i32 0, %23
  store i32 %24, i32* %4, align 4
  br label %30

25:                                               ; preds = %18
  br label %26

26:                                               ; preds = %25, %11
  %27 = load %struct.net_bridge_vlan_group*, %struct.net_bridge_vlan_group** %8, align 8
  %28 = call i32 @br_get_pvid(%struct.net_bridge_vlan_group* %27)
  %29 = load i32*, i32** %7, align 8
  store i32 %28, i32* %29, align 4
  store i32 0, i32* %4, align 4
  br label %30

30:                                               ; preds = %26, %22
  %31 = load i32, i32* %4, align 4
  ret i32 %31
}

declare dso_local %struct.net_bridge_vlan_group* @nbp_vlan_group(%struct.net_bridge_port*) #1

declare dso_local i64 @netif_is_bridge_master(%struct.net_device*) #1

declare dso_local %struct.net_bridge_vlan_group* @br_vlan_group(i32) #1

declare dso_local i32 @netdev_priv(%struct.net_device*) #1

declare dso_local i32 @br_get_pvid(%struct.net_bridge_vlan_group*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
